--- a/Resources/Prototypes/Entities/Clothing/Back/satchel.yml
+++ b/Resources/Prototypes/Entities/Clothing/Back/satchel.yml
@@ -11,6 +11,11 @@
     - 0,0,1,3
     - 3,0,6,3
     - 8,0,9,3
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-textile
+    microFiberColor: micro-fibers-grey
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -20,6 +25,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/leather.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-leather
+    microFiberColor: micro-fibers-brown
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -29,6 +39,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/engineering.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-rubber
+    microFiberColor: micro-fibers-yellow
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -38,6 +53,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/atmospherics.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-rubber
+    microFiberColor: micro-fibers-light-blue
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -50,6 +70,11 @@
   - type: Storage
     storageOpenSound:
       collection: BikeHorn
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-textile
+    microFiberColor: micro-fibers-green
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -59,6 +84,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/mime.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-textile
+    microFiberColor: micro-fibers-white
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -68,6 +98,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/medical.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-synthetic
+    microFiberColor: micro-fibers-white
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -77,6 +112,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/chemistry.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-synthetic
+    microFiberColor: micro-fibers-orange
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -86,6 +126,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/virology.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-synthetic
+    microFiberColor: micro-fibers-green
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -95,6 +140,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/genetics.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-synthetic
+    microFiberColor: micro-fibers-blue
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -104,6 +154,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/science.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-synthetic
+    microFiberColor: micro-fibers-purple
+#SS220 Micro_fibers end
 
 - type: entity
   parent: [ClothingBackpackSatchel]
@@ -113,6 +168,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/security.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-reinforced-textile
+    microFiberColor: micro-fibers-black
+#SS220 Micro_fibers end
 
 - type: entity
   parent: [ClothingBackpackSatchel]
@@ -122,6 +182,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/brigmedic.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-synthetic
+    microFiberColor: micro-fibers-white
+#SS220 Micro_fibers end
 
 - type: entity
   parent: [ClothingBackpackSatchel]
@@ -131,6 +196,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/captain.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-reinforced-textile
+    microFiberColor: micro-fibers-blue
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -140,6 +210,11 @@
   components:
   - type: Sprite
     sprite: Clothing/Back/Satchels/hydroponics.rsi
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-floral
+    microFiberColor: micro-fibers-green
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -149,6 +224,11 @@
   components:
     - type: Sprite
       sprite: Clothing/Back/Satchels/cargo.rsi
+#SS220 Micro_fibers start
+    - type: MicroFiber
+      microFiberMaterial: micro-fibers-leather
+      microFiberColor: micro-fibers-brown
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -158,6 +238,11 @@
   components:
     - type: Sprite
       sprite: Clothing/Back/Satchels/salvage.rsi
+#SS220 Micro_fibers start
+    - type: MicroFiber
+      microFiberMaterial: micro-fibers-leather
+      microFiberColor: micro-fibers-brown
+#SS220 Micro_fibers end
 
 - type: entity
   parent: ClothingBackpackSatchel
@@ -178,3 +263,7 @@
     maxItemSize: Huge
     grid:
     - 0,0,19,9
+#SS220 Micro_fibers start
+  - type: MicroFiber
+    microFiberMaterial: micro-fibers-plasma
+#SS220 Micro_fibers end
