+localized dataset + ghost role

--- a/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/space.yml
@@ -114,6 +114,15 @@
   - type: ActionGrant
     actions:
     - ActionGoal
+  - type: GhostRole
+    makeSentient: true
+    allowSpeech: false
+    allowMovement: true
+    name: ghost-role-information-space-bear-name
+    description: ghost-role-information-space-bear-description
+    rules: ghost-role-information-freeagent-rules
+    mindRoles:
+    - MindRoleGhostRoleFreeAgent
   #SS220 Goal end
 
 - type: entity
