--- a/Resources/Prototypes/SS220/Actions/types.yml
+++ b/Resources/Prototypes/SS220/Actions/types.yml
@@ -21,4 +21,4 @@
     event: !type:ShoutActionEvent
       shoutSound:
         collection: WyccGoalShout
-      shoutPhrases: goalPhrases
+      shoutPhrases: GoalPhrases
