--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -21,9 +21,11 @@
     - suitStorage
   - type: AmmoCounter
   - type: Gun
-    minAngle: 11 #220 SG Angle Updates
-    maxAngle: 20 #220 SG Angle Updates
-    fireRate: 7.5 #220 SG Angle Updates
+    #220 SG Angle Updates begin
+    minAngle: 11 
+    maxAngle: 20 
+    fireRate: 7.5 
+    #220 SG Angle Updates end
     burstFireRate: 8
     angleIncrease: 3
     angleDecay: 16
@@ -105,12 +107,14 @@
   - type: Wieldable
     unwieldOnUse: false
   - type: GunWieldBonus
-    minAngle: -2 #220 SG Angle Updates
-    maxAngle: -13 #220 SG Angle Updates
+    #220 SG Angle Updates begin
+    minAngle: -2 
+    maxAngle: -13 
   - type: Gun
-    minAngle: 17 #220 SG Angle Updates
-    maxAngle: 29 #220 SG Angle Updates
-    shotsPerBurst: 6 #220 SG Angle Updates
+    minAngle: 17 
+    maxAngle: 29 
+    shotsPerBurst: 6 
+    #220 SG Angle Updates end
     availableModes:
     - Burst
     - FullAuto
@@ -143,12 +147,14 @@
     - type: Wieldable
       unwieldOnUse: false
     - type: GunWieldBonus
-      minAngle: -2 #220 SG Angle Updates
-      maxAngle: -13 #220 SG Angle Updates
+      #220 SG Angle Updates begin
+      minAngle: -2 
+      maxAngle: -13 
     - type: Gun
-      minAngle: 17 #220 SG Angle Updates
-      maxAngle: 29 #220 SG Angle Updates
-      fireRate: 6.5 #220 SG Angle Updates
+      minAngle: 17 
+      maxAngle: 29 
+      fireRate: 6.5 
+      #220 SG Angle Updates end
       burstFireRate: 12
       soundGunshot:
         path: /Audio/Weapons/Guns/Gunshots/atreides.ogg
@@ -207,9 +213,11 @@
   - type: ChamberMagazineAmmoProvider
     boltClosed: null
   - type: Gun
-    fireRate: 6.5 #220 SG Angle Updates
-    minAngle: 17 #220 SG Angle Updates
-    maxAngle: 27 #220 SG Angle Updates
+    #220 SG Angle Updates begin
+    fireRate: 6.5 
+    minAngle: 17 
+    maxAngle: 27 
+    #220 SG Angle Updates end
     angleIncrease: 1.5
     angleDecay: 6
     selectedMode: FullAuto
