--- a/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
@@ -274,6 +274,9 @@
   categories:
   - UplinkWeaponry
   conditions:
+  - !type:BuyerJobCondition
+    whitelist:
+    - Chef
 #SS220 SpicyUPD end
 
 #- type: listing
