--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -3126,6 +3126,11 @@
     thresholds:
       0: Alive
       25: Dead
+  # ss220 kitten in hands
+  - type: MultiHandedItem
+  - type: Item
+    size: Huge
+  # ss220 kitten in hands
 
 - type: entity
   name: sloth
